--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "start": "npx ts-node ./app.ts",
+    "migrate": "npx prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,9 +13,13 @@
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "body-parser": "^1.20.1",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.44",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
