--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.20.1",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-crypto": "1.0.5"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.44",
