feat: add chat room feature with socket io

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-crypto": "1.0.5"
+    "express-crypto": "1.0.5",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.44",
