--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "axios": "^1.3.3",
     "body-parser": "^1.20.1",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
