--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://USER:PASS@IP_DB:PORT/HOST"
+
+example
+"DATABASE_URL="mysql://root:root@localhost:3306/final_project_db""
