--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "@types/socket.io-client": "^3.0.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
